--- a/style.css
+++ b/style.css
@@ -95,7 +95,11 @@ section:hover{
 
 
 @media  (max-width: 478px){
+    body{
+        padding: 0.8rem;
+    }
     section{
+        padding: 0.8rem;
         h1{
             font-size: 1rem;
         }
